diesel_compile_tests/tests/fail/derive_deprecated/deprecated_primary_key.stderr
error: expected `,`
  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:12:23
   |
12 | #[primary_key(id, bar = "baz")]
   |                       ^

error: expected `,`
  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:19:22
   |
19 | #[primary_key(id, qux(id))]
   |                      ^^^^

error: unexpected end of input, expected parentheses
  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:26:3
   |
26 | #[primary_key]
   |   ^^^^^^^^^^^

error: expected parentheses
  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:33:15
   |
33 | #[primary_key = id]
   |               ^

warning: #[primary_key] attribute form is deprecated
  = help: use `#[diesel(primary_key(id, name))]` instead

error: Deriving `AsChangeset` on a structure that only contains primary keys isn't supported.

  = help: If you want to change the primary key of a row, you should do so with `.set(table::id.eq(new_id))`.
  = note: `#[derive(AsChangeset)]` never changes the primary key of a row.

  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:39:10
   |
39 | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `AsChangeset` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: `id`
  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:33:17
   |
33 | #[primary_key = id]
   |                 ^^

error[E0425]: cannot find value `id` in this scope
  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:33:17
   |
33 | #[primary_key = id]
   |                 ^^ not found in this scope
   |
help: consider importing one of these items
   |
12 | use crate::users::id;
   |
12 | use std::process::id;
   |
